--- a/activity/index.html
+++ b/activity/index.html
@@ -11,8 +11,13 @@
 <body>
     <div class="menu-container">Menu Conatiner</div>
     <div class="formula-container">Formula Conatiner</div>
-    <div class="grid">Grid</div>
-    <div class="sheets-conatiner">
+    <div class="grid-container">
+        <div class="top-left_block block">top</div>
+        <div class="top-row"></div>
+        <div class="left-col"></div>
+        <div class="grid"></div>
+    </div>
+    <div class="sheets-container">
         <div class="icon-container">
             <i class="fas fa-plus icon"></i>
         </div>
@@ -21,5 +26,6 @@
         </div>
     </div>
     <script src="script.js"></script>
+    <script src="init.js"></script>
 </body>
 </html>
