Added font size and font family formatting

--- a/activity/index.html
+++ b/activity/index.html
@@ -38,9 +38,13 @@
             <i class="fas fa-underline menu-icon"></i>
         </div>
         <div class="alignment-container">
-            <i class="fas fa-align-left menu-icon"></i>
-            <i class="fas fa-align-justify menu-icon"></i>
-            <i class="fas fa-align-right menu-icon"></i>
+            <i class="fas fa-align-left menu-icon" direct="left"></i>
+            <i class="fas fa-align-justify menu-icon" direct="center"></i>
+            <i class="fas fa-align-right menu-icon" direct="right"></i>
+        </div>
+        <div class="color-container">
+            <input type="color" name="" id="" class="bg-color">
+            <input type="color" name="" id="" class="color">
         </div>
     </div>
     <div class="formula-container">
